--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-由于阿里云忘了续费，服务器被删除了，我会稍后恢复并打算迁移至github.io。
+<html>
+  <body>
+    <h1>由于阿里云忘了续费，服务器被删除了，我会稍后恢复并打算迁移至github.io。</h1>
+  </body>
+</html>
