fix _thumb files

--- a/article/bing-wallpaper-1-0-0-0-html.html
+++ b/article/bing-wallpaper-1-0-0-0-html.html
@@ -2,7 +2,7 @@
 
 &nbsp;
 
-<a href="/attachment/up/blog/images/Bing-Wallpaper-1.0.0.0_13083/5bb006fc3b9e.png"><img style="background-image: none; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border: 0px;" title="" src="/attachment/up/blog/images/Bing-Wallpaper-1.0.0.0_13083/_thumb.png" alt="" width="504" height="316" border="0" /></a>
+<a href="/attachment/up/blog/images/Bing-Wallpaper-1.0.0.0_13083/5bb006fc3b9e.png"><img style="background-image: none; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border: 0px;" title="" src="/attachment/up/blog/images/Bing-Wallpaper-1.0.0.0_13083/thumb.png" alt="" width="504" height="316" border="0" /></a>
 
 <!--more-->
 
