update video embeding

--- a/article/豆瓣电台功能演示视频第二版-html.html
+++ b/article/豆瓣电台功能演示视频第二版-html.html
@@ -1,6 +1,6 @@
 这个视频是基于1.7.1版的。
 
-<object width="480" height="400" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0"><param name="src" value="http://player.youku.com/player.php/sid/XMzQ0MDczMjQ4/v.swf" /><param name="allowfullscreen" value="true" /><param name="quality" value="high" /><param name="allowscriptaccess" value="always" /><embed width="480" height="400" type="application/x-shockwave-flash" src="http://player.youku.com/player.php/sid/XMzQ0MDczMjQ4/v.swf" allowfullscreen="true" quality="high" allowscriptaccess="always" /></object>
+<iframe height=498 width=510 src="http://player.youku.com/embed/XMzQ0MDczMjQ4" frameborder=0 "allowfullscreen"></iframe>
 
 &nbsp;
 
