--- a/article/k-f-storm豆瓣电台已停止维护-html.html
+++ b/article/k-f-storm豆瓣电台已停止维护-html.html
@@ -22,9 +22,9 @@
 
 <a title="http://v.youku.com/v_show/id_XMzQ0MDczMjQ4.html" href="http://v.youku.com/v_show/id_XMzQ0MDczMjQ4.html">http://v.youku.com/v_show/id_XMzQ0MDczMjQ4.html</a>
 
-<object width="480" height="400" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0"><param name="src" value="http://player.youku.com/player.php/sid/XMzQ0MDczMjQ4/v.swf" /><param name="allowfullscreen" value="true" /><param name="quality" value="high" /><param name="allowscriptaccess" value="always" /><embed width="480" height="400" type="application/x-shockwave-flash" src="http://player.youku.com/player.php/sid/XMzQ0MDczMjQ4/v.swf" allowfullscreen="allowfullscreen" quality="high" allowscriptaccess="always" /></object>
+<iframe height=498 width=510 src="http://player.youku.com/embed/XMzQ0MDczMjQ4" frameborder=0 "allowfullscreen"></iframe>
 <h1></h1>
 <h1>功能演示视频（1.2.4版）</h1>
 <a href="http://v.youku.com/v_show/id_XMzAwNDgyNjg0.html" target="_blank">http://v.youku.com/v_show/id_XMzAwNDgyNjg0.html</a>
 
-<object width="480" height="400" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0"><param name="src" value="http://player.youku.com/player.php/sid/XMzAwNDgyNjg0/v.swf" /><param name="allowfullscreen" value="true" /><param name="quality" value="high" /><param name="allowscriptaccess" value="always" /><embed width="480" height="400" type="application/x-shockwave-flash" src="http://player.youku.com/player.php/sid/XMzAwNDgyNjg0/v.swf" allowfullscreen="allowfullscreen" quality="high" allowscriptaccess="always" /></object>
+<iframe height=498 width=510 src="http://player.youku.com/embed/XMzAwNDgyNjg0" frameborder=0 "allowfullscreen"></iframe>
