--- a/article/修复验证码问题-豆瓣电台1-7-3发布-html.html
+++ b/article/修复验证码问题-豆瓣电台1-7-3发布-html.html
@@ -28,4 +28,4 @@ PS：强烈反对登录时必须输入验证码！
 
 &nbsp;
 
-详细信息请看：<a href="http://www.kfstorm.com/blog/doubanfm">http://www.kfstorm.com/blog/doubanfm</a>
+详细信息请看：<a href="/article/doubanfm">/article/doubanfm</a>
