--- a/article/豆瓣电台功能演示-html.html
+++ b/article/豆瓣电台功能演示-html.html
@@ -1,4 +1,4 @@
-这是豆瓣电台1.2.4版的功能演示视频。软件下载地址：<a href="http://www.kfstorm.com/blog/doubanfm/">http://www.kfstorm.com/blog/doubanfm/</a>
+这是豆瓣电台1.2.4版的功能演示视频。软件下载地址：<a href="/article/doubanfm">/article/doubanfm</a>
 
 &nbsp;
 
