--- a/article/豆瓣电台2-0-8发布--html.html
+++ b/article/豆瓣电台2-0-8发布--html.html
@@ -18,4 +18,4 @@ PS：无法打开.application格式的用户，或者嫌ClickOnce安装麻烦、
 
 &nbsp;
 
-详细信息请看：<a href="/article/doubanfm">/article/doubanfm</a>
+详细信息请看：<a href="/article/doubanfm">链接</a>
