--- a/article/bing-wallpaper-html.html
+++ b/article/bing-wallpaper-html.html
@@ -1,6 +1,6 @@
 这是一个可以每天自动更换桌面壁纸的软件，壁纸是必应中国版的首页图片。与必应缤纷桌面不同的是，这个软件只具有简单的壁纸更换功能。
 
-最新版本：<a href="/attachment/up/bingwallpaper/BingWallpaper_1.0.5.8.exe">1.0.5.8</a>
+最新版本：<a href="/attachment/up/bingwallpaper/BingWallpaper_1.0.5.10.exe">1.0.5.10</a>
 <h1>功能说明</h1>
 <span style="line-height: 1.714285714; font-size: 1rem;">没有托盘图标，双击运行会打开一个窗口，里面包含版本信息、设置、当日图片的链接等。这个窗口可以关闭，Bing Wallpaper仍然会在后台运行。关闭窗口后如果想再次打开这个窗口，或者想退出Bing Wallpaper，请再次双击运行程序的exe文件。开机启动是不会显示这个窗口的（仍然可以之后双击exe以显示窗口），比较清静。</span>
 
@@ -10,7 +10,7 @@
 
 网上找到的类似软件很多是启动一次后就关掉了，我想要一个常驻后台、自动更换壁纸的软件。
 
-某些类似软件下载的是低分辨率壁纸，清晰度太差。（本软件更换的都是1920x1200分辨率的壁纸）。
+某些类似软件下载的是低分辨率壁纸，清晰度太差。（本软件更换的都是4K分辨率的壁纸）。
 
 某些类似软件功能设置太过复杂，比如可以设置自动检查壁纸的时间间隔为1小时、2小时、6小时等。这样太麻烦，最理想的软件是什么都不需要设置。
 
